[gd_scene load_steps=19 format=3 uid="uid://cv04584lewxfj"]

[ext_resource type="Script" path="res://scripts/tagging_instance.gd" id="1_qwxx4"]
[ext_resource type="Texture2D" uid="uid://bspy7b4mnwwtt" path="res://textures/icons/wizard.svg" id="2_cc4m6"]
[ext_resource type="Texture2D" uid="uid://xejppul6k45c" path="res://textures/icons/new_icon.svg" id="2_mo8qe"]
[ext_resource type="Texture2D" uid="uid://dv4iwivdjx3x7" path="res://textures/icons/import_icon.svg" id="3_43ms0"]
[ext_resource type="Texture2D" uid="uid://cahrs65npors7" path="res://textures/icons/save_icon.svg" id="3_e4k6d"]
[ext_resource type="Texture2D" uid="uid://bicsshv0cpf0u" path="res://textures/icons/load_icon.svg" id="4_8tt1r"]
[ext_resource type="Script" path="res://scripts/tag_list_script.gd" id="4_kxfaf"]
[ext_resource type="Texture2D" uid="uid://b7swawa8cdqhk" path="res://textures/icons/template_icon.svg" id="4_n3yw6"]
[ext_resource type="PackedScene" uid="uid://bnflgv04edf7b" path="res://scenes/session_blacklist.tscn" id="5_hmrsi"]
[ext_resource type="PackedScene" uid="uid://dp0dtvv4h81x0" path="res://scenes/sites_option_menu.tscn" id="5_vdixj"]
[ext_resource type="Texture2D" uid="uid://bv0lodmh5bkey" path="res://textures/icons/search_icon.svg" id="6_ym3uf"]
[ext_resource type="PackedScene" uid="uid://dvsreawj4roce" path="res://scenes/special_tag_window.tscn" id="7_f11d4"]
[ext_resource type="PackedScene" uid="uid://dkbd01s367esl" path="res://scenes/tag_full_search.tscn" id="7_jn3ja"]
[ext_resource type="Shortcut" uid="uid://b51shdx0qgn0f" path="res://resources/shortcuts/list_actions/search_for_tag_shortcut.tres" id="9_es8co"]
[ext_resource type="Texture2D" uid="uid://bt5shjh0vtvkv" path="res://textures/icons/export_icon.svg" id="10_r4cct"]
[ext_resource type="PackedScene" uid="uid://c8uqd4iwfeg78" path="res://scenes/auto_search.tscn" id="11_pjino"]
[ext_resource type="Script" path="res://scripts/generator_button.gd" id="12_nab3q"]
[ext_resource type="Texture2D" uid="uid://4o3c2a4my706" path="res://textures/icons/copy_icon.svg" id="13_51rkk"]

[node name="TaggingInstance" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qwxx4")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="MainContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="MainTags" type="VBoxContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
theme_override_constants/separation = 4

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MainContainer/MainTags"]
layout_mode = 2
alignment = 2

[node name="NewListButton" type="Button" parent="MarginContainer/MainContainer/MainTags/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
tooltip_text = "New List"
icon = ExtResource("2_mo8qe")
icon_alignment = 1

[node name="SaveListButton" type="Button" parent="MarginContainer/MainContainer/MainTags/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
tooltip_text = "Save List"
icon = ExtResource("3_e4k6d")
icon_alignment = 1

[node name="LoadListButton" type="Button" parent="MarginContainer/MainContainer/MainTags/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
tooltip_text = "Load List"
icon = ExtResource("4_8tt1r")
icon_alignment = 1

[node name="WizardButton" type="Button" parent="MarginContainer/MainContainer/MainTags/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
tooltip_text = "Open the tag wizard."
theme_override_constants/icon_max_width = 24
icon = ExtResource("2_cc4m6")
icon_alignment = 1

[node name="LoadTagButton" type="Button" parent="MarginContainer/MainContainer/MainTags/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
tooltip_text = "Load a tag list from text"
icon = ExtResource("3_43ms0")
icon_alignment = 1

[node name="TemplateButton" type="Button" parent="MarginContainer/MainContainer/MainTags/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
tooltip_text = "Load a Template"
theme_override_constants/icon_max_width = 24
icon = ExtResource("4_n3yw6")
icon_alignment = 1

[node name="Empty" type="Control" parent="MarginContainer/MainContainer/MainTags"]
visible = false
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Label" type="Label" parent="MarginContainer/MainContainer/MainTags/Empty"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -11.5
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "Tags"

[node name="TagItems" type="ItemList" parent="MarginContainer/MainContainer/MainTags"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 9.5
select_mode = 1
script = ExtResource("4_kxfaf")
allow_alting = true

[node name="Interact" type="HBoxContainer" parent="MarginContainer/MainContainer/MainTags"]
layout_mode = 2
size_flags_stretch_ratio = 0.5

[node name="FullSearchButton" type="Button" parent="MarginContainer/MainContainer/MainTags/Interact"]
layout_mode = 2
tooltip_text = "Search on e621 database."
shortcut = ExtResource("9_es8co")
shortcut_in_tooltip = false
icon = ExtResource("6_ym3uf")

[node name="AutoSearch" parent="MarginContainer/MainContainer/MainTags/Interact" instance=ExtResource("11_pjino")]
layout_mode = 2
items_to_fetch = 13

[node name="AddButton" type="Button" parent="MarginContainer/MainContainer/MainTags/Interact"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Add tag to list."
text = "Add"

[node name="SelectTagButton" type="Button" parent="MarginContainer/MainContainer/MainTags/Interact"]
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "Select tags of the packs
you've installed."
text = "Select..."

[node name="Suggests" type="VBoxContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
theme_override_constants/separation = 4

[node name="Empty" type="Control" parent="MarginContainer/MainContainer/Suggests"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Label" type="Label" parent="MarginContainer/MainContainer/Suggests/Empty"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -46.5
offset_top = -11.5
offset_right = 46.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Suggestions"

[node name="SuggestionList" type="ItemList" parent="MarginContainer/MainContainer/Suggests"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 6.0
select_mode = 1
script = ExtResource("4_kxfaf")

[node name="SmartList" type="ItemList" parent="MarginContainer/MainContainer/Suggests"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
select_mode = 1
script = ExtResource("4_kxfaf")

[node name="Final" type="VBoxContainer" parent="MarginContainer/MainContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.5
theme_override_constants/separation = 4

[node name="Platform" type="HBoxContainer" parent="MarginContainer/MainContainer/Final"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Label" type="Label" parent="MarginContainer/MainContainer/Final/Platform"]
layout_mode = 2
text = "Format:"

[node name="SitesOptionMenu" parent="MarginContainer/MainContainer/Final/Platform" instance=ExtResource("5_vdixj")]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
max_height = 150

[node name="FinalTags" type="TextEdit" parent="MarginContainer/MainContainer/Final"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 9.0
editable = false
wrap_mode = 1
autowrap_mode = 2

[node name="Buttons" type="HBoxContainer" parent="MarginContainer/MainContainer/Final"]
layout_mode = 2

[node name="GeneratorButtons" type="HBoxContainer" parent="MarginContainer/MainContainer/Final/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.0
theme_override_constants/separation = 3

[node name="GenerateButton" type="Button" parent="MarginContainer/MainContainer/Final/Buttons/GeneratorButtons"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 8.0
tooltip_text = "Generate your tag
list based on your
entries."
text = "Generate List"

[node name="GeneratorButton" type="Button" parent="MarginContainer/MainContainer/Final/Buttons/GeneratorButtons"]
layout_mode = 2
size_flags_horizontal = 3
text = "^"
script = ExtResource("12_nab3q")

[node name="PopupMenu" type="PopupMenu" parent="MarginContainer/MainContainer/Final/Buttons/GeneratorButtons/GeneratorButton"]
size = Vector2i(190, 62)
visible = true
item_count = 2
item_0/text = "Generate Default"
item_0/id = 0
item_1/text = "Generate Alternative"
item_1/id = 1

[node name="ExtraOptions" type="VBoxContainer" parent="MarginContainer/MainContainer/Final/Buttons"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0

[node name="ExportButton" type="Button" parent="MarginContainer/MainContainer/Final/Buttons/ExtraOptions"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Export your tag list as a file."
text = "Export List"
icon = ExtResource("10_r4cct")

[node name="CopyButton" type="Button" parent="MarginContainer/MainContainer/Final/Buttons/ExtraOptions"]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Copy list to
your clipboard."
text = "Copy List"
icon = ExtResource("13_51rkk")

[node name="SpecialTagWindow" parent="." instance=ExtResource("7_f11d4")]
visible = false
layout_mode = 1

[node name="SessionBlacklist" parent="." instance=ExtResource("5_hmrsi")]
visible = false
layout_mode = 1

[node name="TagFullSearch" parent="." instance=ExtResource("7_jn3ja")]
visible = false
layout_mode = 1

[node name="ExportFileDialog" type="FileDialog" parent="."]
ok_button_text = "Save"
access = 2
filters = PackedStringArray("*.txt  ; Plain Text FIle")
use_native_dialog = true
